# pixel

./: .gitignore  LICENSE  README.md  llm-architecture.md  pyproject.toml
benchmarks/: accuracy_benchmark.py  calibrated_benchmark.py  gptq_style_benchmark.py  llm_benchmark.py  memory_benchmark.py  optimized_benchmark.py  perplexity_benchmark.py
examples/: basic_usage.py  compress_model.py  svd_hybrid_demo.py
pixel/: __init__.py
pixel/core/: __init__.py  adaptive.py  calibrated.py  compression.py  config.py  gptq_style.py  patterns.py  synthesis.py
pixel/experimental/: __init__.py  svd_hybrid.py
pixel/nn/: __init__.py  attention.py  layers.py
pixel/utils/: __init__.py  io.py  math_ops.py  memory.py
tests/: test_compression.py  test_integration.py  test_patterns.py  test_synthesis.py
