[project]
name = "pixel-compress"
version = "0.1.0"
description = "Pattern-Indexed eXtreme Efficient LLM - Neural network weight compression via pattern-based storage"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PIXEL Contributors"}
]
requires-python = ">=3.9"
keywords = ["llm", "compression", "neural-network", "patterns", "machine-learning", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
benchmarks = [
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
]

[project.urls]
Homepage = "https://github.com/pixel-compress/pixel"
Documentation = "https://github.com/pixel-compress/pixel#readme"
Repository = "https://github.com/pixel-compress/pixel"
Issues = "https://github.com/pixel-compress/pixel/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pixel*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
